<resources>
    <string name="app_name">Rick And Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alive">Alive</string>
    <string name="human">Human</string>
    <string name="rick">Rick</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="characters">Characters</string>
    <string name="episodes">episodes</string>
    <string name="locations">Locations</string>
    <string name="location">Location</string>
    <string name="status"><b>Status:</b></string>
    <string name="species"><b>Species:</b></string>
    <string name="gender"><b>Gender:</b></string>
    <string name="male">Male</string>
    <string name="number_of_episodes"><b>Number of episodes:</b></string>
    <string name="_5">5</string>
    <string name="aceptar">Aceptar</string>
    <string name="canceler">Canceler</string>
    <string name="last_seen_location_residents">Last seen location residents</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="planet">Planet:</string>
    <string name="planet2">Planet</string>
    <string name="dimension">Dimension:</string>
    <string name="numbers_of_residents">Numbers of Residents:</string>
    <string name="_101">101</string>
    <string name="earth_c_137">Earth (C-137)</string>
    <string name="citadel_of_ricks">Citadel of Ricks</string>
    <string name="last_seen_location">Last seen location</string>
    <string name="empty">-</string>
    <string name="empty_skeleton">-------------</string>
    <string name="search">Search</string>
    <string name="change">Change</string>
    <string name="s01e01">S01E01</string>
    <string name="pilot">Pilot</string>
    <string name="december_2_2013">December 2, 2013</string>
    <string name="error_al_obtener_datos">Error al obtener los datos</string>
    <string name="error_internet">Verifica tu conexión de internet</string>
    <string name="message_succes">La operación se realizó con éxito</string>
    <string name="episodios">Episodios</string>
    <string name="caracteres">Characters</string>
    <string name="episode_detail">Episode Detail</string>
    <string name="episode_name">Episode name:</string>
    <string name="episode_number">Episode number:</string>
    <string name="episode_date">Episode date:</string>
    <string name="microverse">Microverse</string>
    <string name="anatomy_park">Anatomy Park</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="home">Home</string>
    <string name="watch">Watch</string>
    <string name="success">Succes</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="content_description">Content Description</string>
    <string name="strFetchingDataFromServer">Fetching data from server</string>
    <string name="total_of_items">Total of items %1$d</string>
    <string name="no_results_found">No results found</string>
</resources>