<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_right_24" />

    <TextView
        android:id="@+id/tv_episode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/s01e01"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_episode_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pilot"
        app:layout_constraintEnd_toEndOf="@+id/tv_episode"
        app:layout_constraintStart_toStartOf="@+id/tv_episode"
        app:layout_constraintTop_toBottomOf="@+id/tv_episode" />

    <TextView
        android:id="@+id/tv_air_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/december_2_2013"
        app:layout_constraintEnd_toEndOf="@+id/tv_episode_name"
        app:layout_constraintStart_toStartOf="@+id/tv_episode_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_episode_name" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_air_date" />
</androidx.constraintlayout.widget.ConstraintLayout>