<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".features.characters_detail.CharacterDetailFragment">


        <ImageView
            android:id="@+id/image_character"
            android:layout_width="@dimen/width_image_tablet"
            android:layout_height="@dimen/height_image_tablet"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_character">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.faltenreich.skeletonlayout.SkeletonLayout
                        android:id="@+id/skeleton_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        app:maskColor="@color/mask_color"
                        app:shimmerColor="@color/shimmer_color">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/cardView"
                            style="@style/card_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="visible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:strokeColor="@color/white">


                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:visibility="visible">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginTop="32dp"
                                    android:text="@string/status"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/Species"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/species"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintStart_toStartOf="@+id/textView3"
                                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                                <TextView
                                    android:id="@+id/gender_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/gender"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintStart_toStartOf="@+id/Species"
                                    app:layout_constraintTop_toBottomOf="@+id/Species" />

                                <TextView
                                    android:id="@+id/episodios_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginBottom="32dp"
                                    android:text="@string/number_of_episodes"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="@+id/gender_label"
                                    app:layout_constraintTop_toBottomOf="@+id/gender_label" />

                                <ImageView
                                    android:id="@+id/image_status_session"
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_marginStart="16dp"
                                    android:src="@drawable/border_image"
                                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                                    app:layout_constraintStart_toEndOf="@+id/textView3"
                                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                                <TextView
                                    android:id="@+id/tv_status"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:layout_marginEnd="8dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintBottom_toBottomOf="@+id/image_status_session"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/image_status_session"
                                    app:layout_constraintTop_toTopOf="@+id/image_status_session" />

                                <TextView
                                    android:id="@+id/tv_specie"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_status"
                                    app:layout_constraintStart_toStartOf="@+id/tv_status"
                                    app:layout_constraintTop_toTopOf="@+id/Species" />

                                <TextView
                                    android:id="@+id/tv_gender"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_specie"
                                    app:layout_constraintStart_toStartOf="@+id/tv_specie"
                                    app:layout_constraintTop_toTopOf="@+id/gender_label" />

                                <TextView
                                    android:id="@+id/tv_episodes"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="24dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_gender"
                                    app:layout_constraintStart_toEndOf="@+id/episodios_label"
                                    app:layout_constraintTop_toTopOf="@+id/episodios_label" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </com.faltenreich.skeletonlayout.SkeletonLayout>


                    <com.faltenreich.skeletonlayout.SkeletonLayout
                        android:id="@+id/skeleton_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        app:maskColor="@color/mask_color"
                        app:shimmerColor="@color/shimmer_color">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_location"
                            style="@style/card_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView"
                            app:strokeColor="@color/white">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/tv_numbers_of_residenst"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="24dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_dimention"
                                    app:layout_constraintStart_toEndOf="@+id/textView8"
                                    app:layout_constraintTop_toTopOf="@+id/textView8" />

                                <TextView
                                    android:id="@+id/textView8"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:layout_marginBottom="24dp"
                                    android:text="@string/numbers_of_residents"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="@+id/textView7"
                                    app:layout_constraintTop_toBottomOf="@+id/tv_dimention" />

                                <TextView
                                    android:id="@+id/tv_dimention"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_type"
                                    app:layout_constraintStart_toEndOf="@+id/textView7"
                                    app:layout_constraintTop_toTopOf="@+id/textView7" />

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/dimension"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="@+id/textView6"
                                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                                <TextView
                                    android:id="@+id/tv_type"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="@+id/tv_name"
                                    app:layout_constraintStart_toEndOf="@+id/textView6"
                                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="16dp"
                                    android:text="@string/type"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="@+id/textView4"
                                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                                <TextView
                                    android:id="@+id/tv_name"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="24dp"
                                    android:layout_marginEnd="8dp"
                                    android:text="@string/empty"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toEndOf="@+id/textView4"
                                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginTop="32dp"
                                    android:text="@string/name"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                                <TextView
                                    android:id="@+id/textView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="24dp"
                                    android:text="@string/last_seen_location"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    app:layout_constraintStart_toStartOf="@+id/textView4"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </com.faltenreich.skeletonlayout.SkeletonLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>